@@ -6,9 +6,9 @@ HOMEPAGE=http://www.github.com/williamh/pybugz
 IUSE=zsh-completion python_targets_python3_3 python_targets_python3_4
 KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 sparc x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x86-solaris
 LICENSE=GPL-2
-RDEPEND=zsh-completion? ( app-shells/zsh ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[readline(+)] ) python_targets_python3_4? ( dev-lang/python:3.4[readline(+)] ) >=dev-lang/python-exec-2:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python3_3(-),-python_single_target_python3_4(-)]
+RDEPEND=python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[readline(+)] ) python_targets_python3_4? ( dev-lang/python:3.4[readline(+)] ) >=dev-lang/python-exec-2:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python3_3(-),-python_single_target_python3_4(-)]
 REQUIRED_USE=|| ( python_targets_python3_3 python_targets_python3_4 )
 SLOT=0
 SRC_URI=https://github.com/williamh/pybugz/archive/0.11.1.tar.gz -> pybugz-0.11.1.tar.gz
 _eclasses_=bash-completion-r1	c8399c7c7ecbcf7ed6e5bd3abb3d4af3	distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	vcs-snapshot	58b766562c9fbfb3268b04e33cdf2f66
-_md5_=eb639aa7083c2e63d300f4f8baa38415
+_md5_=41952db12a14b3140440daa6bbf54469
