@@ -5,8 +5,8 @@ EAPI=5
 HOMEPAGE=http://www.github.com/williamh/pybugz
 IUSE=zsh-completion python_targets_python3_3 python_targets_python3_4
 LICENSE=GPL-2
-RDEPEND=zsh-completion? ( app-shells/zsh ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[readline(+)] ) python_targets_python3_4? ( dev-lang/python:3.4[readline(+)] ) >=dev-lang/python-exec-2:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python3_3(-),-python_single_target_python3_4(-)]
+RDEPEND=python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[readline(+)] ) python_targets_python3_4? ( dev-lang/python:3.4[readline(+)] ) >=dev-lang/python-exec-2:=[python_targets_python3_3(-)?,python_targets_python3_4(-)?,-python_single_target_python3_3(-),-python_single_target_python3_4(-)]
 REQUIRED_USE=|| ( python_targets_python3_3 python_targets_python3_4 )
 SLOT=0
 _eclasses_=bash-completion-r1	c8399c7c7ecbcf7ed6e5bd3abb3d4af3	distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	git-r3	3a2bd0ae504c33a50061885480f3def3	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=9988d999676ae2d9ec5a6dd5fe4b1c56
+_md5_=072d4f2662ce2c42097bff89efe4ba04
