@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install prepare unpack
 DEPEND=dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4
 DESCRIPTION=A simple battery monitor in the system tray
-EAPI=4
-HOMEPAGE=https://gitorious.org/ptbatterysystemtray
+EAPI=5
+HOMEPAGE=https://wiki.gentoo.org/wiki/No_homepage
 IUSE=debug
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-3
 RDEPEND=dev-qt/qtcore:4 dev-qt/qtdbus:4 dev-qt/qtgui:4
 SLOT=0
-SRC_URI=https://gitorious.org/ptbatterysystemtray/ptbatterysystemtray/archive-tarball/1.0.0-rc2 -> ptbatterysystemtray-1.0.0_rc2.tar.gz
+SRC_URI=mirror://gentoo/ptbatterysystemtray-1.0.0_rc2.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	qmake-utils	ea709b525d28e3087eddedb2f884dbbe	qt4-r2	7199e3db5b5908325487d379c6f67cf0	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece
-_md5_=89de3aa305d26eb8dfd4b046372c7c66
+_md5_=d9448e24aa39f4baead1e953d02796e7
