@@ -2,14 +2,14 @@
 Hash: SHA256
 
 DIST pybugz-0.11.1.tar.gz 23787 SHA256 05b2cef8a655ab34d9279e6341d16a803af07958e72320125cb30a3fd6bc8eec SHA512 bc2277a8e900765bf1799e5de65de5df8184bf50b6ca7c78478a9f43ceb78aa66bcb53c3fd89f7b194b13fa14ad162291d559554a8cb073c071104e2b0978c61 WHIRLPOOL cb8f9a36cac6ae7a42e43d6d9489e2593c8ae76153b769bf04f269967e6477e37b1633d30969c4d7c6d0bcd816aff7bd189a1754c06769e3ea0f761eda3c16db
-EBUILD pybugz-0.11.1.ebuild 1241 SHA256 d5b34470e3e738119d3671124f481450de76a07833d6cb59255f35e5ac0729b0 SHA512 be7e9a30304f6d6c490c9f792f0b8e7d3fdeab5491073b92198f753a87ffd9404757c6f1f57e35d7615051686c053e29ed26b7e1795cae184812bc5866f5c730 WHIRLPOOL 3784d2e321ff6b987ad46d45c57ff2c26771abb1fa964dbb0f24378a2fd3523a4f353a4e5a6fc8d480e86268a7faa8d2367518556a32e845455538c948de9356
-EBUILD pybugz-9999.ebuild 1250 SHA256 88949f7abf31500b7f9c401f08704d68ae6488cc913a40baa916e7e4ca31da06 SHA512 5a4e25cf5d3662f1211b85ca26b09677c305fe08f6c72110ee766c1e9c3a064f63698ac4e1b7e3633ce2c7b0aef2ee3c0c72f309a87cd7bf0dc07dd12f95708c WHIRLPOOL d5f4745dcad4b8bdd6fe8c2c2b12ee7ec46bf448134d4c2ee953a27cf284809922f034ad5458508ee1b18fbe074cb1155b1f5c8200c2ffc86a3bc1ff25e3cb50
-MISC ChangeLog 17842 SHA256 eae4e1ba42ee8f59c8e72ae39f31c8381131a386170215b4abae60b21072ea3a SHA512 322e4b32381d8a3751cb0b8247a7ea83c4222bb9887873cd99f0149dd37ce6a16d91543e88ee35e8bd3a288bf241788d1b04525772e6fa7d0e4703108f75eedd WHIRLPOOL 2096b2923f31140185be2aa37e365569e2cfa2209507fe1bc4ec08f414653c6e3665d9675fb253d51760fb1a66a20e249414bdd8e4776c1d6d249409fb178846
+EBUILD pybugz-0.11.1.ebuild 1207 SHA256 8571ec88e8bb9232977f6f69417c926d620a6493a22722e76988a1ab2dc24544 SHA512 71bd89b96453e4399a805360aade16d23793e8f05aa9e3db7e9d792b308f2064985e818ae0be5a3917ae762c6ced81f938d143bae2cffe3eba03dfd749f95ffe WHIRLPOOL 936dd7012e076fc5632b2fc4846d390bc1dc34a398e1fad18a0c7455faff3e6f31fa36e3a44c8fab68054b83eac03da2395627ae4f7143aee0d98cc28dd79a96
+EBUILD pybugz-9999.ebuild 1214 SHA256 dfd359d59248cc92db76aa847d06540a07d4a3c95bb47df30a4e2a6ae6458d3b SHA512 d72ab87766398c357e84adb6a6339d3e299639161a5c708070e16af9ba9e81c87795af8e42b68652add200b06f3cd44ae4e83cb30c79791b0ff1bd669343c8db WHIRLPOOL fc67a790da381846e3d1cee398bf5743a5ac9bb5cfd193e53296e1677d2f2184bd94cd23f206f97a594afe62d8e5f61cac10e1734c6c9a92a8ae0e280e3bbc2d
+MISC ChangeLog 17975 SHA256 5ddbb99603f0a93012f74df5f6ea4a175548ac40ba7de35436ee0fd0dca61549 SHA512 8569fef0e47f48dd91e74464eda92b1d7a2133f7e3d9f4287215fda6b43a85e8a134ddf89e7336302e1d5dd4859ec03f9308da2874410b8582eefbced02f4b0d WHIRLPOOL 838ea4b12941e7e703fe1555fbb9eb221d4526d653f30605e6f4a34b17363fa25ede7d4a779cb9ca5740af085c7a0ee4c1f67425e8d13d4058de932ee6993c73
 MISC metadata.xml 209 SHA256 9702266f06a8210e65427d02ae3fa7d4b4d3188866429279a27715e9e9c34bc5 SHA512 205ea975d2acc80bad01cd1be939e75a10b5e165fe39b4107eea9803672c2456554a5314b2daa81f59cbbca5d25c98f08c9f0fcbea7b6927fc2f478b4c92b113 WHIRLPOOL 7e0d16169a317148046f705628c0ce5d7ad2d34c6edc367a46dd4e35c6472e3449aebec3b8b6549273aaee15cacd2d31c3021d17ce07d9c62b4b31ae8c9424d6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSh0jgACgkQblQW9DDEZTjh0QCgu3Kz/qEUpoFsgBwDt4xC+hKk
-4eIAn2WJxKey4t433Dajxqx5kZQt0m6w
-=zmI1
+iEYEAREIAAYFAlUXks0ACgkQblQW9DDEZThSfwCgtvJIyC5IQyh7SbqqIFsbDbb9
+fuMAoJT07kCp6N0wYu2u5J3AztZ+6YdI
+=OBXZ
 -----END PGP SIGNATURE-----
