@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/pybugz/pybugz-0.11.1.ebuild,v 1.9 2014/12/14 20:56:13 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/pybugz/pybugz-0.11.1.ebuild,v 1.10 2015/03/29 05:50:54 williamh Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python3_3 python3_4 )
@@ -24,8 +24,7 @@ LICENSE="GPL-2"
 SLOT="0"
 IUSE="zsh-completion"
 
-RDEPEND="${DEPEND}
-	zsh-completion? ( app-shells/zsh )"
+RDEPEND="${DEPEND}"
 
 python_install_all() {
 	distutils-r1_python_install_all
