@@ -2,25 +2,25 @@
 Hash: SHA256
 
 DIST ptbatterysystemtray-1.0.0_rc2.tar.gz 234884 SHA256 c28e43e9157df74c7e4599485c24fe8dc79201133c56d7d72f3e4eda5def12f4 SHA512 869eb71032691738277c1ba16b9e8d6e79ab25e8c533c2c12b4a69c6dbfee53d40bb471e4d28ce60b9e3dae19aea166953b5d5641ae0ba873ef55811fdd088e5 WHIRLPOOL 78dd6a7634563abd683ee389ba620fdf6db811df6b0a69773a5d249986ffd381d73f02377a2ae6dd6510e53449c7af4142232a875749a9ea851f391ac9582020
-EBUILD ptbatterysystemtray-1.0.0_rc2.ebuild 764 SHA256 0c893ec40acecded5558d85e0b65acf2e2c8cfef7e9047de36e517819577ce56 SHA512 47a03b612e9a72f834c9c5a1a33572344bca30a039040539e68f20ae3cd6813f52d841c10f29d8953876dbe632fc5def7a17b772d6e66e343e2b99a8d91e424a WHIRLPOOL 522135a134d616dd40e11a6567b13c9276b58c2da182df0c5c492310b62dcc790df81feace6ca79e627c9b33020f3e1611b2e02d5e15ed541f73494f320d9c5d
-MISC ChangeLog 722 SHA256 5f248cd64a688aaacbfc2c33cd2d5842c5587f62e5c4b58b49cd008521505d56 SHA512 bb49124f5ee4bf06d676bd784c840c44c4b76aa7e7e72a53f72e6901fcc0f411f5731e5b89bf6213fae02f5c66bd4338e4e894609094d9eac3177f93b7e8fae2 WHIRLPOOL 2cc8f76b56229ac2a9957a06b2d807f0b42340593c2ecce3a46d770eba07c90f0e8841918fbbe454f7edab0d524c26b2bdf75d04754620d7ad6e856c60c02b22
+EBUILD ptbatterysystemtray-1.0.0_rc2.ebuild 713 SHA256 29ee19f4467f739b15ab3b66c43f72a0d560f6aa84b8408d1fe26e6c5eae4ff9 SHA512 f2871da510853163747f05400d45e5ca186a74be3724681f21de8d54a55f047faee3142db259c6046a27297e657b2f65ec9820e7d0bcd505ce01898ecb8e25dd WHIRLPOOL 60d5358e70ca7f9bfb178d7a4a3b2ea148f6cad6799ea719414408d06645583e6686210c2b4b4d470a9c5893723497b7202f2c9338a9a86a40d58e64a98ae07f
+MISC ChangeLog 876 SHA256 7df029057a12bf96c877c7d26618adc2730d2275401f25f967cea83bc880bd00 SHA512 b4ede303fb2496770ff3193260509d14e707bca3981a9a6a5dc704a93dcb4ca1776cd42fcd4657075a5e7e684095dc5181042f427781f8314d5c34e7664df742 WHIRLPOOL d0b43b524e0030d25963adab1ba956a08ff299ccb4bd7aeaa12021b7c7ac868a6874629e907c7d3ddebf3295ecdd2b3490cb90181ae11bf9b74467c701463956
 MISC metadata.xml 155 SHA256 94ed5876ef16dbc191744ff6b8939a0f428fcb8add316d898880e1c4c880b9e7 SHA512 f05c8982778167c3667c9246b9730ba49fec2967731ed2c615e31a7fddc220fcea8c0843caa70a14957c8c4910892c512b6f2e00a9724d65e6032e1289f4562a WHIRLPOOL 25ccd49f04da07c8525fe18b21229764bb4104938abefc6c953bf9caa533dd5c10ae7b3f80a1251182e6c1520c09383d9f1d0ac1dc74832a99299c9be27406c4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJRMpBlXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88bn4QAI8/SNZQsDmGar7GzrjPXGGR
-Cyz4j07YVp1fx3XeMv29vJ9Ok04oF2t/+jXEpMQ50XLiGeQ8lSTkRgWMJw1viOrp
-ROrEJ7DyAgZ+ArAxgld2Wx+T7zBWF+PamDGM4ebWeRbJ177Oj2R97Ez8A/ym0j1o
-PRV7wkR0esV7VUkUkZ8M8yL5k8HQwIF4nT+MRex0IZr0TEIGZgurv+a09bls2/xU
-uXTrOquWU2CaslayAHkc20fPI72/4cfBgoDHMc1JAFSlmGnZCqVkuDcKBZunOdO9
-xqjGTA1ucauZiGNmUz0LazfRUGe0CtgMTjkq2dsAQTGW2wr1HOTJOaPATcPudiRf
-Of12xHqXys6zmXGhQawr7UIXQQpColq8eZZ2UhnpYBWIWrtu6Hhe82leqnnM374k
-ypoa6EDj8ej2bSF7H9NI7a3Z1VXFpmDIaBmyR+ZR7M7ef6485aQHXtEKCAjDvQgK
-H5Ta8YZi0mK3qsVHByNZLqdGYNi/Y+Aoj8Q8wQ2oP3/M3imsdRUrwMmXxczUuVA1
-ytKbqxi7Ic8/VGHwzR+BYZTusS1G3zhzgaCC9KDUWjIzqJfj6dyVm4sPkbT2czT4
-DIAy5ryPuYwHv6S11U0GT7xLAxqfYJ6GXtRzIEhCtPPPaj7qoZhPDD1Vpk4vVXL4
-35qiWTxTht2BjXWo3p62
-=BLk3
+iQJ8BAEBCABmBQJVF47UXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ5MTlDREQ0NUU5Mjc4RkU2RjJDNTAyNzU0
+RkRGOUNGRDJGQUM1MTRFAAoJEE/fnP0vrFFOTCEP/A41i1VSrqdQYsHWnTCOd4wz
+to+Y87q+oVatZvxqF2bD+m5LFayq9op5Z0IL/xOySkuJm0LFrSYNUiXsttnikxhR
+ZVLqCII3XvQs8GpR03hK3fsgcnE3vfJ6bmxLpDF5+li/+VoLL/D6qbr0uCDm4rcE
+15Gzv8YhcAHNbJT8p6It/65+9wVI8EwYW0RznPNiui30JsQ3ekkmVJ3ttYUB/8LD
+5/lzdUdz201rLYRFDvaYBD4pJeevioDQziwOZcZ8WcK2iABCbx/5UpSlTanBxl7Y
+9QZ/+JuRQu46/6DVg22YxJvhOPUXbW6VU7mqdKp/cpPNZRMhceB5P+of32g7ZFKi
+f2p78zJy0tr5EDo4oPnquuOiCNRN17UViqTF7+btS5gdUPgnViuNlH5AwKNUiAqB
++onO9pExNrr9P5Xo8Ow15ANe65AuiMCs4xGHhdBM2o7gQ77rFckfzVHDoLqsifVj
+yY2zq36WTTMBYvnG4YK2zX/PtULQ/lTcwmt5sU6TktHyDxekf8VnNeD/h5yL3Uyt
+HbgZDrLLxrgclb4nEj8ozGCVTB85XsIYhOmSBLwFW1CmxHosHPzHYXoWtF1HstHu
+KFQzehBRQq1JI6uWJuyKvo1Kme8PJNIzf/sW4tdqHXtAdcdXtJL/oclIqOB2VSEo
+8pJxR+fs5ZFy8aI+nla8
+=+Zyo
 -----END PGP SIGNATURE-----
