@@ -1,6 +1,10 @@
 # ChangeLog for www-client/pybugz
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/pybugz/ChangeLog,v 1.138 2014/12/29 22:13:04 williamh Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-client/pybugz/ChangeLog,v 1.139 2015/03/29 05:50:54 williamh Exp $
+
+  29 Mar 2015; William Hubbs <williamh@gentoo.org> pybugz-0.11.1.ebuild,
+  pybugz-9999.ebuild:
+  Drop the rdepend on app-shells/zsh
 
   29 Dec 2014; William Hubbs <williamh@gentoo.org>
   -files/pybugz-0.10.1-bugzilla-4.4.1.patch, -pybugz-0.10.1-r2.ebuild,
